--- a/style.css
+++ b/style.css
@@ -86,10 +86,7 @@
     0% {
         transform: rotate(360deg);
     }
-    
 }
-    
-
 .ex-11-icon {
     font-size: 60px;
 }
@@ -113,13 +110,6 @@
         transform: rotate(0deg);
     }
 }
-
-    
-/* .ex-11-icon:hover{
-    transform: rotate(0);
-    transition: all 2s;
-} */
-
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -140,6 +130,31 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+
+}
+.ex-12-button:hover .ex-12-top-white{
+    animation-name: moving-top-bar;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+@keyframes moving-top-bar {
+    0%{
+        position: absolute;
+        top: -10px;
+        left: 10%;
+    }
+
+    50%{
+        position: absolute;
+        top: -10px;
+        left: 70%;
+    }
+
+    100%{
+        position: absolute;
+        top: -10px;
+        left: 10%;    
+    }
 }
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
@@ -148,4 +163,28 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+.ex-12-button:hover .ex-12-bottom-white{
+    animation-name: moving-bottom-bar;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+@keyframes moving-bottom-bar {
+    0%{
+        position: absolute;
+        bottom: -10px;
+        right: 20%;
+    }
+
+    50%{
+        position: absolute;
+        bottom: -10px;
+        right: 70%;
+    }
+
+    100%{
+        position: absolute;
+        bottom: -10px;
+        right: 20%;    
+    }
 }
