--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@
     height: 20px;
 
 }
+
+/***** ANIMAZIONE BARRA SUPERIORE EX-12 *****/
 .ex-12-button:hover .ex-12-top-white{
     animation-name: moving-top-bar;
     animation-duration: 2s;
@@ -156,6 +158,49 @@
         left: 10%;    
     }
 }
+/*****************FINE********************/
+
+/***** ANIMAZIONE BARRA SUPERIORE EX-13 *****/
+.ex-13-button:hover .ex-13-top-white{
+    animation-name: moving-top-bar-new;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+}
+@keyframes moving-top-bar-new {
+    0%{
+        position: absolute;
+        top: -10px;
+        left: 10%;
+    }
+    20%{
+        position: absolute;
+        top: -10px;
+        left: 80%;
+    }
+    40%{
+        position: absolute;
+        top: 100%;
+        left: 80%;
+    } 
+    60%{
+        position: absolute;
+        top: 100%;
+        left: -10px;
+    }
+    80%{
+        position: absolute;
+        top: -10px;
+        left: -20px;
+    }
+    100%{
+        position: absolute;
+        top: -10px;
+        left: 10%;    
+    }
+}
+/*****************FINE********************/
+
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
@@ -164,6 +209,7 @@
     width: 60px;
     height: 20px;
 }
+/***** ANIMAZIONE BARRA INFERIORE EX-12 *****/
 .ex-12-button:hover .ex-12-bottom-white{
     animation-name: moving-bottom-bar;
     animation-duration: 2s;
@@ -188,3 +234,44 @@
         right: 20%;    
     }
 }
+/*****************FINE********************/
+
+/***** ANIMAZIONE BARRA INFERIORE EX-13 *****/
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: moving-bottom-bar-new;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+}
+@keyframes moving-bottom-bar-new {
+    0%{
+        position: absolute;
+        bottom: -10px;
+        right: 20%;
+    }
+    20%{
+        position: absolute;
+        bottom: -10px;
+        right: 80%;
+    }
+    40%{
+        position: absolute;
+        bottom: 100%;
+        right: 90%;
+    } 
+    60%{
+        position: absolute;
+        bottom: 100%;
+        right: -10px;
+    }
+    80%{
+        position: absolute;
+        bottom: -10px;
+        right: -20px;
+    }
+    100%{
+        position: absolute;
+        bottom: -10px;
+        right: 20%;    
+    }
+}
+/*****************FINE********************/
